# MyFinance

./: .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/core/: database.py  exceptions.py  middleware.py  security.py
backend/app/models/: __init__.py  account.py  base.py  category.py  classification_proposal.py  classification_rule.py  conversation.py  transaction.py  transaction_cluster.py  user.py
backend/app/schemas/: account.py  ai.py  analytics.py  category.py  classification.py  classification_rule.py  cluster.py  transaction.py  user.py
backend/app/services/: account_service.py  ai_config.py  ai_service.py  analytics_service.py  auth_service.py  category_descriptions.py  category_service.py  chat_service.py  classification_service.py  cluster_service.py  embedding_service.py  financial_context.py  import_service.py  label_parser.py  llm_provider.py  llm_service.py  metamodel.py  query_engine.py  rule_service.py  transaction_service.py
backend/app/utils/: currency.py  file_parsers.py
backend/migrations/: env.py
backend/migrations/versions/: 001_create_users_table.py  002_create_core_tables.py  003_add_balance_reference.py  004_add_classification_rules.py  005_add_embedding_support.py  005_add_keycloak_id_to_users.py  006_add_parsed_metadata.py  007_add_classification_proposals.py  008_add_account_bank_details.py  (+2 more)
backend/tests/: conftest.py  test_health.py
(+97 files in other folders)
